--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -10,8 +10,7 @@
                     <img src="./images/samples/1.jpg" />
                 </div>
                 <div class="body">
-                    <p>body body</p>
-                    <p>body body</p>
+                    <% include ./partials/content.ejs %>
                 </div>
                 <% include ./partials/footer.ejs %>
             </div>
