--- a/src/templates/partials/head.ejs
+++ b/src/templates/partials/head.ejs
@@ -2,6 +2,7 @@
     <meta charset="utf-8" />
     <title><%= page.head.title %></title>
     <meta name="description" content="<%= page.description %>" />
+    <meta name="robots" content="index,follow" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta property="og:title" content="<%= page.title %>" />
