Update sidebar; Add tester link

--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -11,6 +11,7 @@
                 </div>
                 <div class="body">
                     <% include ./partials/content.ejs %>
+                    <% include ./partials/sidebar.ejs %>
                 </div>
                 <% include ./partials/footer.ejs %>
             </div>
