--- a/src/less/style.less
+++ b/src/less/style.less
@@ -85,6 +85,7 @@ body {
     margin: 0 auto;
     box-shadow: #777 0 1px 4px;
     padding: 30px;
+    font-size: 0;
 }
 .footer {
     width: 100%;
@@ -102,7 +103,7 @@ body {
     position: relative;
     overflow: hidden;
     max-height: 400px;
-    height: 100%;
+    min-height: 280px;
     margin: 0 auto;
     z-index: 15;
     border: 2px solid #fff;
@@ -274,25 +275,47 @@ body {
     }
 }
 .content {
+    display: inline-block;
+    width: 67%;
+    margin: 0 3% 0 0;
+    vertical-align: top;
     color: #555;
+    font-size: 16px;
     h2 {
+        font-size: 20px;
         font-weight: 300;
         color: @color-eden;
     }
+    p {
+
+    }
     
+}
+.sidebar {
+    display: inline-block;
+    width: 30%;
+    vertical-align: top;
+    font-size: 16px;
+    h3 {
+        color: @color-eden;
+        font-weight: 300;
+    }
+    line-height: 26px;
 }
 
 // smaller desktop or tablet
-@media only screen and (max-width : 960px) {
+@media only screen
+    and (min-width : 700px)
+    and (max-width : 960px) {
     .title {
         width: 60%;
         .tagline {
-            font-size: 18px;
+            font-size: 20px;
         }
     }
     .phone {
         width: 40%;
-        font-size: 18px;
+        font-size: 20px;
     }
     .nav {
         width: 95%;
@@ -302,13 +325,38 @@ body {
                 font-size: 15px;
             }
         }
-        
+    }
+    .body {
+        width: 80%;
     }
 }
 // mobile
 @media only screen
-    and (min-device-width : 320px)
-    and (max-device-width : 480px)
-    and (-webkit-min-device-pixel-ratio: 2) {
-
+    and (min-width : 320px)
+    and (max-width : 700px) {
+        .header {
+            background-size: 100px 66px;
+        }
+        .nav {
+            width: 95%;
+            li {
+                a {
+                    padding: 8px 24px;
+                    font-size: 15px;
+                }
+            }
+        }
+        .title {
+            width: 50%;
+            .tagline {
+                font-size: 15px;
+            }
+        }
+        .phone {
+            width: 50%;
+            font-size: 15px;
+        }
+        .body {
+            width: 80%;
+        }
 }
