--- a/src/less/style.less
+++ b/src/less/style.less
@@ -281,6 +281,7 @@ body {
     vertical-align: top;
     color: #555;
     font-size: 16px;
+    line-height: 24px;
     h2 {
         font-size: 20px;
         font-weight: 300;
@@ -330,6 +331,23 @@ body {
         width: 80%;
     }
 }
+.footer {
+    text-align: center;
+    margin: 30px 0;
+    line-height: 24px;
+    ul {
+        font-size: 0;
+    }
+    li {
+        display: inline-block;
+        font-size: 13px;
+        color: #777;
+        margin: 0 10px;
+        
+    }
+}
+
+
 // mobile
 @media only screen
     and (min-width : 320px)
