--- a/src/less/style.less
+++ b/src/less/style.less
@@ -327,11 +327,14 @@ body {
     width: 30%;
     vertical-align: top;
     font-size: 16px;
+    color: #555;
     h3 {
         color: @color-eden;
         font-weight: 300;
     }
-    line-height: 26px;
+    .bd {
+        line-height: 32px;
+    }
 }
 
 // smaller desktop or tablet
@@ -370,7 +373,7 @@ body {
     }
     li {
         display: inline-block;
-        font-size: 13px;
+        font-size: 15px;
         color: #777;
         margin: 0 10px;
         
