Add two more pages

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -306,21 +306,26 @@ body {
 }
 .content {
     display: inline-block;
-    width: 67%;
-    margin: 0 3% 0 0;
+    width: 65%;
+    margin: 0 5% 0 0;
     vertical-align: top;
     color: #555;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 17px;
+    line-height: 28px;
     h2 {
-        font-size: 20px;
+        font-size: 24px;
         font-weight: 300;
         color: @color-eden;
     }
     p {
 
     }
-    
+    section {
+        margin: 30px 0 0 0;
+        &:first-child {
+            margin: 0;
+        }
+    }
 }
 .sidebar {
     display: inline-block;
