--- a/src/templates/service.ejs
+++ b/src/templates/service.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <% var page = index; var pageName = 'index'; %>
+    <% var page = service; var pageName = 'service'; %>
     <% include ./partials/head.ejs %>
     <body>
         <div class="page">
             <div class="wrap">
                 <% include ./partials/header.ejs %>
                 <div id="fpHero" class="hero">
-                    <img src="./images/samples/1.jpg" />
+                    <img src="./images/samples/2.jpg" />
                 </div>
                 <div class="body">
                     <% include ./partials/content.ejs %>
