domain filter style

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -377,6 +377,9 @@ body {
     background: none;
     color: @color-eden;
     padding: 0 10px 0 0;
+    &:link, &:visited, &:active {
+        text-decoration: none;
+    }
     &:hover {
         color: @color-tiffany;
     }
