--- a/src/less/style.less
+++ b/src/less/style.less
@@ -382,6 +382,7 @@ body {
     }
     &:hover {
         color: @color-tiffany;
+        cursor: pointer;
     }
     &.selected {
         color: #efefef;
