--- a/src/less/style.less
+++ b/src/less/style.less
@@ -390,6 +390,23 @@ body {
     }
 }
 .people-doc {
+    .hd {
+        h2 {
+            margin-bottom: 0;
+        }
+        .domain {
+            color: #888;
+            font-size: 15px;
+            margin: 0 0 10px 0;
+            li {
+                display: inline-block;
+                margin: 0 10px 0 0;
+            }
+        }
+    }
+    .bd {
+        font-size: 15px;
+    }
     &.hide {
         display: none;
     }
