Add doctor portraits

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -101,7 +101,7 @@ body {
 }
 .wrap {
     position: relative;
-    width: 1080px;
+    width: 1060px;
     max-width: 100%;
     min-height: 400px;
     margin: 0 auto;
@@ -345,12 +345,12 @@ body {
 @domain-height: 32px;
 .people {
     .content {
-        margin: 0 0 0 5%;
+        margin: 10px 0 0 5%;
         width: 75%;
     }
     .sidebar {
         position: relative;
-        margin: 18px 0 0 0;
+        margin: 8px 0 0 0;
         text-align: right;
         .highlight {
             display: block;
@@ -390,14 +390,23 @@ body {
     }
 }
 .people-doc {
+    margin: 0 0 20px 0;
+    .pic {
+        float: left;
+        margin: 0 20px 0 0;
+        img {
+            border-radius: 12px;
+            width: 200px;
+        }
+    }
     .hd {
         h2 {
-            margin-bottom: 0;
+            margin: 10px 0 0 0;
         }
         .domain {
-            color: #888;
+            color: #999;
             font-size: 15px;
-            margin: 0 0 10px 0;
+            margin: 0 0 5px 0;
             li {
                 display: inline-block;
                 margin: 0 10px 0 0;
