--- a/src/less/style.less
+++ b/src/less/style.less
@@ -382,6 +382,7 @@ body {
         text-decoration: none;
     }
     &:hover {
+        text-decoration: none;
         color: @color-tiffany;
         cursor: pointer;
     }
