--- a/src/less/style.less
+++ b/src/less/style.less
@@ -107,19 +107,77 @@ body {
     margin: 0 auto;
     z-index: 10;
 }
+@keyframes two {
+    0% {opacity: 0;}
+    40% {opacity: 0;}
+    50% {opacity: 1;}
+    90% {opacity: 1;}
+    100% {opacity: 0;}
+}
+@keyframes three-1 {
+    0% {opacity: 1;}
+    27.5% {opacity: 1;}
+    33.3% {opacity: 0;}
+    94.4% {opacity: 0;}
+    100% {opacity: 1;}
+}
+@keyframes three-2 {
+    0% {opacity: 0;}
+    27.5% {opacity: 0;}
+    33.3% {opacity: 1;}
+    61.1% {opacity: 1;}
+    66.6% {opacity: 0;}
+    100% {opacity: 0;}
+}
+@keyframes three-3 {
+    0% {opacity: 0;}
+    61.1% {opacity: 0;}
+    66.6% {opacity: 1;}
+    94.4% {opacity: 1;}
+    100% {opacity: 0;}
+}
 .hero {
     position: relative;
     overflow: hidden;
-    max-height: 400px;
-    min-height: 280px;
+    height: 400px;
     margin: 0 auto;
     z-index: 15;
     border: 6px solid #fff;
     border-radius: 30px;
+    background: #fff;
+    &.imgs-2 {
+        img {
+            &:nth-child(2) {
+                animation: two 16s linear infinite;
+            }
+        }
+    }
+    &.imgs-3 {
+        @duration: 24s;
+        img {
+            &:nth-child(1) {
+                animation: three-1 @duration linear infinite;
+            }
+            &:nth-child(2) {
+                animation: three-2 @duration linear infinite;
+            }
+            &:nth-child(3) {
+                animation: three-3 @duration linear infinite;
+            }
+        }
+    }
+    &.three {
+        
+    }
+    &.four {
+        
+    }
     img {
-        position: relative;
-        margin: 0 auto;
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
+
     }
 }
 .nav {
@@ -361,6 +419,7 @@ body {
             width: 100%;
             transition: all 0.2s ease-in-out;
             -webkit-transition: all 0.2s ease-in-out;
+            -moz-transition: all 0.2s ease-in-out;
         }
     }
 }
@@ -420,6 +479,10 @@ body {
     &.hide {
         display: none;
     }
+}
+.calendar {
+    width: 100%;
+    height: 600px;
 }
 // smaller desktop or tablet
 @media only screen
