Update service page style

--- a/src/templates/service.ejs
+++ b/src/templates/service.ejs
@@ -6,9 +6,7 @@
         <div class="page">
             <div class="wrap">
                 <% include ./partials/header.ejs %>
-                <div id="fpHero" class="hero">
-                    <img src="./images/samples/2.jpg" />
-                </div>
+                <% include ./partials/hero.ejs %>
                 <div class="body">
                     <% include ./partials/content.ejs %>
                     <% include ./partials/sidebar.ejs %>
