Optimize images and html

--- a/src/templates/partials/footer.ejs
+++ b/src/templates/partials/footer.ejs
@@ -1,6 +1,6 @@
 <div class="footer">
     <footer>
-        <ul>
+        <ul class="line1">
             <% for (var i = 0; i < footer.line1.length; i += 1) { %>
                 <li><%= footer.line1[i] %></li>
             <% } %>
