--- a/src/templates/people.ejs
+++ b/src/templates/people.ejs
@@ -21,7 +21,7 @@
                     <div class="sidebar">
                         <aside>
                             <ul class="domains">
-                                <li><a class="select-domain all" href="">全部團隊成員</a></li>
+                                <li><a class="select-domain all" href="">所有醫師</a></li>
                             <% for (var i = 0; i < domains.length; i += 1) { %>
                                 <li><a class="select-domain" href=""><%= domains[i]%></a></li>
                             <% } %>
