--- a/src/templates/service.ejs
+++ b/src/templates/service.ejs
@@ -3,7 +3,7 @@
     <% var page = service; var pageName = 'service'; %>
     <% include ./partials/head.ejs %>
     <body>
-        <div class="page">
+        <div class="page service">
             <div class="wrap">
                 <% include ./partials/header.ejs %>
                 <% include ./partials/hero.ejs %>
