--- a/src/less/style.less
+++ b/src/less/style.less
@@ -603,6 +603,12 @@ body {
             }
         }
     }
+    .schedule {
+        .content, .sidebar {
+            display: block;
+            width: 100%;
+        }
+    }
 }
 
 // mobile
@@ -697,6 +703,12 @@ body {
             }
         }
     }
+    .schedule {
+        .content, .sidebar {
+            display: block;
+            width: 100%;
+        }
+    }
 }
 @media only screen
     and (min-width : 320px)
@@ -787,7 +799,8 @@ body {
         }
         .content, .sidebar {
             display: block;
-            width: 100%;
+            width: 96%;
+            margin: 0 auto;
         }
         .content {
             h2 {
@@ -854,6 +867,24 @@ body {
                         }
                     }
                 }
+            }
+        }
+        .service {
+            .sidebar {
+                display: none;
+            }
+        }
+        .schedule {
+            .body {
+                width: 96%;
+                padding: 15px 0;
+            }
+            .content {
+                display: block;
+                width: 100%;
+            }
+            .sidebar {
+                display: none;
             }
         }
 }
