--- a/src/templates/schedule.ejs
+++ b/src/templates/schedule.ejs
@@ -3,7 +3,7 @@
     <% var page = schedule; var pageName = 'schedule'; %>
     <% include ./partials/head.ejs %>
     <body>
-        <div class="page">
+        <div class="page schedule">
             <div class="wrap">
                 <% include ./partials/header.ejs %>
                 <% include ./partials/hero.ejs %>
