--- a/src/less/style.less
+++ b/src/less/style.less
@@ -90,11 +90,12 @@ body {
     background: #fff;
     max-width: @pageW - 60;
     margin: 0 auto;
-    //box-shadow: #777 0 1px 4px;
+    box-shadow: #777 0 1px 3px;
     //border: 3px solid @color-tiffany;
-    border-radius: 0 0 15px 15px;
+    border-radius: 0 0 5px 5px;
     padding: 30px;
     font-size: 0;
+
 }
 .footer {
     width: 100%;
@@ -187,9 +188,10 @@ body {
     height: 400px;
     margin: 0 auto;
     z-index: 15;
-    border: 6px solid #fff;
-    border-radius: 30px;
     background: #fff;
+    border-radius: 3px;
+    border: 1px solid #fff;
+    box-shadow: #777 0 0 6px;
     &.imgs-2 {
         img {
             &:nth-child(2) {
@@ -249,7 +251,7 @@ body {
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 3px;
+        height: 1px;
         border-radius: 10px;
         background: @color-eden;
     }
@@ -263,11 +265,10 @@ body {
         position: relative;
         a {
             width: 100%;
-            margin: 3px 0 0 0;
+            margin: 0;
             padding: 6px 0 8px 0;
             font-size: 18px;
             letter-spacing: 2px;
-            border-radius: 12px 12px 0 0;
             text-decoration: none;
             display: block;
             white-space: nowrap;
@@ -285,6 +286,7 @@ body {
                 //background: url('images/whitenoise-150x150.png') repeat;
                 //background: url('images/bg-b1.png') repeat;
                 background: @color-eden;
+                box-shadow: #777 0 0 3px;
                 color: #eee;
             }
         }
@@ -591,7 +593,7 @@ body {
         }
     }
     .hero {
-        width: 92%;
+        width: 96%;
         height: 330px;
     }
     .people {
@@ -664,12 +666,13 @@ body {
         bottom: 18px;
     }
     .hero {
-        width: 90%;
+        width: 94%;
         height: 260px;
     }
     .body {
         top: -10px;
-        width: 76%;
+        width: 90%;
+        padding: 10px 5px;
     }
     .footer {
         width: 90%;
@@ -783,7 +786,9 @@ body {
             }
         }
         .hero {
-            height: 180px;
+            width: 100%;
+            height: 220px;
+            box-shadow: #777 0 0 3px;
             img {
                 left: -5%;
                 width: 110%;
@@ -793,8 +798,8 @@ body {
             display: none;
         }
         .body {
-            width: 88%;
-            padding: 5px;
+            width: 96%;
+            padding: 5px 0;
             top: -10px;
         }
         .content, .sidebar {
