--- a/src/less/style.less
+++ b/src/less/style.less
@@ -51,6 +51,7 @@ body {
         background: url('images/paws.png') repeat;
         background-size: 200px 280px;
         z-index: 1;
+        opacity: 0.5;
     }
     &:after {
         display: block;
