Update phone and address links

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -111,6 +111,12 @@ body {
         color: #777;
         margin: 0 10px;
     }
+    a {
+        &:link, &:visited {
+        color: #777;
+        text-decoration: none;
+        }
+    }
 }
 .wrap {
     position: relative;
