--- a/src/templates/partials/header.ejs
+++ b/src/templates/partials/header.ejs
@@ -21,7 +21,7 @@
         </h1>
         <div class="phone">
             <span class="label"><span class="notxt"><%= phone.label %></span></span>
-            <span class="info"><a href="tel:<%= phone.label %>"><%= phone.info %></a></span>
+            <span class="info"><a href="tel:<%= phone.info %>"><%= phone.info %></a></span>
             <div class="address">
                 <address>
                     <span class="label notxt"><%= address.label %></span>
